--- a/homework_4_file.Rmd
+++ b/homework_4_file.Rmd
@@ -39,6 +39,7 @@ HDIcols<- HDI %>%
   clean_names()%>%
   select(iso3, country, gii_2019, gii_2010)%>%
   mutate(difference=gii_2019-gii_2010)%>%
+  #not needed here as we can now use the country name...but see below
   mutate(iso_code=countrycode(country, origin = 'country.name', destination = 'iso2c'))%>%
   mutate(iso_code2=countrycode(iso3, origin ='iso3c', destination = 'iso2c'))
 
@@ -71,7 +72,7 @@ Join_HDI_2 <- World %>%
 
 # Problems 
 
-* With Join_HDI there are 11 rows for Antarctica if using aff_iso - be sure to use iso column
+* With Join_HDI there are 11 rows for Antarctica if using aff_iso - be sure to use iso column or remove the NA values as in the aff_iso antartica is NA
 * With Join_HDI_2 the entries for other islands aren't joined as they don't have the same name...e.g. France, French Guiana, French Southern Territories.....
 
 ```{r}
